Changed to privileged app

--- a/index.html
+++ b/index.html
@@ -5,111 +5,22 @@
         <table width="100%" border="1">
             <tr>
                 <td>name</td>
-                <td>value</td>
+                <td>SIM 1</td>
+                <td>SIM 2</td>
+            </tr>
+
+            <tr>
+                <td>lastKnownNetworkField</td>
+                <td id="mclastKnownNetworkField">0</td>
+                <td id="mclastKnownNetworkField2">0</td>
             </tr>
             <tr>
-                <td>signalStrength dBm</td>
-                <td id="signalStrengthField">0</td>
-            </tr>
-            <tr>
-                <td>relSignalStrength %</td>
-                <td id="relSignalStrengthField">0</td>        
-            </tr>
-            <tr>
-                <td>linkSpeed Mb/s</td>
-                <td id="linkSpeedField">0</td>
-            </tr>
-            <tr>
-                <td>ipAddress</td>
-                <td id="ipAddressField">0</td>
-            </tr>
-        </table>
-        <input type="button" value="< F5 > local wifi" id="btn-refresh-local-wifi"></input>
-        <br />
-        <table width="100%" border="1">
-            <tr>
-                <td>name</td>
-                <td>voice</td>
-                <td>data</td>
-            </tr>
-            <tr>
-                <td>gsmCellIdField</td>
-                <td id="vgsmCellIdField">0</td>
-                <td id="dgsmCellIdField">0</td>                
-            </tr>
-            <tr>
-                <td>gsmLocationAreaCodeField</td>
-                <td id="vgsmLocationAreaCodeField">0</td>        
-                <td id="dgsmLocationAreaCodeField">0</td>        
-            </tr>
-            <tr>
-                <td>connectedField</td>
-                <td id="vconnectedField">0</td>
-                <td id="dconnectedField">0</td>
-            </tr>
-            <tr>
-                <td>emergencyCallsOnlyField</td>
-                <td id="vemergencyCallsOnlyField">0</td>
-                <td id="demergencyCallsOnlyField">0</td>
-            </tr>
-            <tr>
-                <td>lastKnownMccField</td>
-                <td id="vlastKnownMccField">0</td>
-                <td id="dlastKnownMccField">0</td>
-            </tr>
-            <tr>
-                <td>longNameField</td>
-                <td id="vlongNameField">0</td>
-                <td id="dlongNameField">0</td>
-            </tr>
-            <tr>
-                <td>mccField</td>
-                <td id="vmccField">0</td>
-                <td id="dmccField">0</td>
-            </tr>
-            <tr>
-                <td>mncField</td>
-                <td id="vmncField">0</td>
-                <td id="dmncField">0</td>
-            </tr>
-            <tr>
-                <td>shortNameField</td>
-                <td id="vshortNameField">0</td>
-                <td id="dshortNameField">0</td>
-            </tr>
-            <tr>
-                <td>stateField</td>
-                <td id="vstateField">0</td>
-                <td id="dstateField">0</td>
-            </tr>
-            <tr>
-                <td>relSignalStrengthField</td>
-                <td id="vrelSignalStrengthField">0</td>
-                <td id="drelSignalStrengthField">0</td>
-            </tr>
-            <tr>
-                <td>roamingField</td>
-                <td id="vroamingField">0</td>
-                <td id="droamingField">0</td>
-            </tr>
-            <tr>
-                <td>signalStrengthField</td>
-                <td id="vsignalStrengthField">0</td>
-                <td id="dsignalStrengthField">0</td>
-            </tr>
-            <tr>
-                <td>stateConnectionField</td>
-                <td id="vstateConnectionField">0</td>
-                <td id="dstateConnectionField">0</td>
-            </tr>
-            <tr>
-                <td>typeField</td>
-                <td id="vtypeField">0</td>
-                <td id="dtypeField">0</td>
+                <td>lastKnownHomeNetworkField</td>
+                <td id="mclastKnownHomeNetworkField">0</td>
+                <td id="mclastKnownHomeNetworkField2">0</td>
             </tr>
         </table>        
-        <input type="button" value="< F5 > mobile voice" id="btn-refresh-mobile-voice"></input>        
-        <input type="button" value="< F5 > mobile data" id="btn-refresh-mobile-data"></input>      
+        <input type="button" value="< F5 > mobile network info" id="btn-refresh-mobile"></input>        
         <script src="js/cip.js"></script>
     </body>
 </html>
